--- a/static/stat562/hw_stat562.Rmd
+++ b/static/stat562/hw_stat562.Rmd
@@ -476,7 +476,9 @@ According to theorem 6.2.13, if and only if $\sum_{i=1}^ny_i-\sum_{i=1}^nx_i=0$,
 
 $$\frac{f(\mathbf{x}|\theta)}{f(\mathbf{y}|\theta)}=\frac{\prod_{i=1}^nf(x_i)}{\prod_{i=1}^nf(y_i)}=\frac{\prod_{i=1}^n[\mathrm{e}^{-(x_i-\theta)}I_{(\theta,\infty)}(x_i)]}{\prod_{i=1}^n[\mathrm{e}^{-(y_i-\theta)}I_{(\theta,\infty)}(y_i)]}=\frac{\mathrm{e}^{\sum_{i=1}^ny_i}I_{(\theta,\infty)}(x_i)}{\mathrm{e}^{\sum_{i=1}^nx_i}I_{(\theta,\infty)}(y_i)}$$
 
-If and only if $\min\{x_1,..,x_n\} =\min\{y_1,..,y_n\}$, the ratio $\frac{f(\mathbf{x}|\theta)}{f(\mathbf{y}|\theta)}$ for every two sample points x and y is constant as a function of $\theta$. Therefore, $T(X)=\min\{X_1,..,X_n\}$ is a minimal sufficient statistic.
+If and only if $\min\{x_1,..,x_n\} =\min\{y_1,..,y_n\}$, the ratio $\frac{f(\mathbf{x}|\theta)}{f(\mathbf{y}|\theta)}$ for every two sample points x and y is constant as a function of $\theta$. 
+
+Therefore, $T(X)=\min\{X_1,..,X_n\}$ is a minimal sufficient statistic.
 
  ---
  
@@ -522,9 +524,9 @@ According to example 6.2.17 (Uniform ancillary statistic), the range statistic, 
 
 The pdf of R is $h(r|\theta)=n(n-1)r^{n-2}(1-r),0<r<1$.  
 
-$h(r|\theta)\sim Beta(n-1,2)$.  $E[R]=(n−1)/(n+1)$ does not depend on $\theta$.
+$h(r|\theta)\sim Beta(n-1,2)$.  $E[R]=\frac{n−1}{n+1}$ does not depend on $\theta$.
 
-Let $g[T(\mathbf{X})]=R−E[R]=X_{(n)}−X_{(1)}−(n−1)/(n+1)\not\equiv0$
+Let $g[T(\mathbf{X})]=R−E[R]=X_{(n)}−X_{(1)}−\frac{n−1}{n+1}\not\equiv0$
 
 $Eg[T(\mathbf{X})]=E[R−ER]=E[R]−E[ER]=0$ for all $\theta$.
 
