--- a/docs/stat562/hw_stat562.Rmd
+++ b/docs/stat562/hw_stat562.Rmd
@@ -461,13 +461,6 @@ $$f(\mathbf{x}|\alpha,\beta)=\prod_{i=1}^nf(x_i)=\prod_{i=1}^n\frac{x_i^{\alpha-
 $\prod_{i=1}^nx_i^{-1}$ is free of $(\alpha,\beta)$. Therefore, $T(\prod_{i=1}^nx_i,\sum_{i=1}^nx_i)$ is a sufficient statistic for $(\alpha,\beta)$
 
  ---
- .
- 
- . 
-   
- .
- 
- ---
 
 **6.9** For each of the following distributions let $X_1,..,X_n$ be a random sample. Find a minimal sufficient statistic for $\theta$.
 
@@ -476,13 +469,6 @@ $\prod_{i=1}^nx_i^{-1}$ is free of $(\alpha,\beta)$. Therefore, $T(\prod_{i=1}^n
 $$\frac{f(\mathbf{x}|\theta)}{f(\mathbf{y}|\theta)}=\frac{\prod_{i=1}^nf(x_i)}{\prod_{i=1}^nf(y_i)}=\frac{\frac{1}{(\sqrt{2\pi})^n}\mathrm{e}^{-\frac{\sum_{i=1}^n(x_i-\theta)^2}2}}{\frac{1}{(\sqrt{2\pi})^2}\mathrm{e}^{-\frac{\sum_{i=1}^n(y_i-\theta)^2}2}}=\mathrm{e}^{-\frac{\sum_{i=1}^n(x_i-\theta)^2}2+\frac{\sum_{i=1}^n(y_i-\theta)^2}2}=\mathrm{e}^{\frac12(\sum_{i=1}^ny_i^2-\sum_{i=1}^nx_i^2)-\theta(\sum_{i=1}^ny_i-\sum_{i=1}^nx_i)}$$
 
 According to theorem 6.2.13, if and only if $\sum_{i=1}^ny_i-\sum_{i=1}^nx_i=0$, the ratio $\frac{f(\mathbf{x}|\theta)}{f(\mathbf{y}|\theta)}$ for every two sample points x and y is constant as a function of $\theta$. Therefore, $T(\bar x)=T(\bar y)$ is a minimal sufficient statistic.
-
- ---
- .
- 
- . 
-   
- .
  
  ---
  
@@ -491,13 +477,6 @@ According to theorem 6.2.13, if and only if $\sum_{i=1}^ny_i-\sum_{i=1}^nx_i=0$,
 $$\frac{f(\mathbf{x}|\theta)}{f(\mathbf{y}|\theta)}=\frac{\prod_{i=1}^nf(x_i)}{\prod_{i=1}^nf(y_i)}=\frac{\prod_{i=1}^n[\mathrm{e}^{-(x_i-\theta)}I_{(\theta,\infty)}(x_i)]}{\prod_{i=1}^n[\mathrm{e}^{-(y_i-\theta)}I_{(\theta,\infty)}(y_i)]}=\frac{\mathrm{e}^{\sum_{i=1}^ny_i}I_{(\theta,\infty)}(x_i)}{\mathrm{e}^{\sum_{i=1}^nx_i}I_{(\theta,\infty)}(y_i)}$$
 
 If and only if $\min\{x_1,..,x_n\} =\min\{y_1,..,y_n\}$, the ratio $\frac{f(\mathbf{x}|\theta)}{f(\mathbf{y}|\theta)}$ for every two sample points x and y is constant as a function of $\theta$. Therefore, $T(X)=\min\{X_1,..,X_n\}$ is a minimal sufficient statistic.
-
- ---
- .
- 
- . 
-   
- .
  
  ---
  
@@ -569,11 +548,12 @@ $\frac{Z_1}{Z_2}$ is free of $\alpha$. Therefore，$\frac{\ln X_1}{\ln X_2}$ is 
 
 ## HW6
 
-**6.30** Let Xl, . . . , Xn be a random sample from the pdf f(x ifJ.) = e-(x-!-') , where -00 < fJ. <x < 00.
+**6.30** Let $X_1,..,X_n$ be a random sample from the pdf f(x ifJ.) = e-(x-!-') , where -00 < fJ. <x < 00.
 
-(a). Show that X(l) = min; Xi is a complete sufficient statistic.
+(a). Show that $X(1) = min$; $X_i$ is a complete sufficient statistic.
 
-(b). Use Basu's Theorem to show that X{!) and 82 are independent.
+(b). Use Basu's Theorem to show that $\bar X$ and $\sigma^2$ are independent.
+
 
  ---
 
@@ -587,7 +567,7 @@ f(xIO) O -2 X , 0 < 0 􀀬 x < 00 .
 
  ---
 
-**7.10** The independent random variables X l , . . . , Xn have the common distribution
+**7.10** The independent random variables $X_1,..,X_n$ have the common distribution
 
 if x < 0
 if O 􀃉 x 􀃉 jJ
@@ -596,7 +576,9 @@ if x > jJ,
 where the parameters a and jJ are positive.
 
  (a). Find a tW<rdimensional sufficient statistic for (a, jJ).
+ 
  (b). Find the MLEs of a and jJ.
+ 
  (c). The length (in millimeters) of cuckoos' eggs found in hedge sparrow nests can be modeled with this distribution. For the data
  
 22.0, 23.9, 20.9, 23.8, 25.0, 24.0, 21 .7, 23.8, 22.8, 23. 1, 23. 1 , 23.5, 23.0, 23.0,
@@ -605,7 +587,7 @@ find the MLEs of a and jJ.
 
  ---
 
-**7.11** Let X! , . . . , X", be iid with pdf
+**7.11** Let $X_1,..,X_n$, be iid with pdf
 
 f(xI9) = 9x9-t, 0 􀋁 X 􀁱 1 , 0 < (} < 00 .
 
