--- a/static/stat565/hw_stat565.Rmd
+++ b/static/stat565/hw_stat565.Rmd
@@ -604,7 +604,7 @@ pairw.anova(table_wash$Response,table_wash$Days, conf.level = 0.95, method = "ls
 pairw.anova(table_wash$Response,table_wash$Days, conf.level = 0.95, method = "tukey", MSE = NULL, df.err = NULL, control = NULL)
 ```
 
- - Analysis of residuals
+ - Model adequacy Checking
 
 There is a little bit of violation of normality in histogram plot.
 
@@ -620,6 +620,10 @@ ols_plot_resid_hist(lm(Response~Solution+Days, data=table_wash))
 plot(model_wash)
 
 ```
+
+ - The initial conculsion
+
+Based on the experimental data, we found Solution3 has a stronger effectiveness in retarding bacteria growth in 5-gallon milk containers. Meanwhile, the data in Days4 are significant different with others. Next step, We suggest to investigate the factors affecting the data, refine the design, and repeat the experiment.
 
  ---
 
@@ -670,7 +674,7 @@ pairw.anova(table_mail$Response,table_mail$Design, conf.level = 0.95, method = "
  
 (c) Analyze the residuals from this experiment.
 
- - Transfermation
+ - Model adequacy Checking
  
 The normality test and histogram of residuals show a violation of normality.
 
