--- a/docs/stat565/hw_stat565.Rmd
+++ b/docs/stat565/hw_stat565.Rmd
@@ -601,9 +601,13 @@ Based on the experimental data, we found Solution3 has a stronger effectiveness 
 model_wash <- aov(Response~Solution+Days, data=table_wash)
 summary(model_wash)
 summary.lm(model_wash)
+```
+```{r echo=T, collapse=T, out.width='45%'}
 # Plot for solutions and days
 plot(LSD.test(model_wash, trt="Solution",alpha = 0.05,p.adj="bonferroni"),main="Ranges of response grouped by solutions")
 plot(LSD.test(aov(Response~Days+Solution, data=table_wash), trt="Days",alpha = 0.05,p.adj="bonferroni"),main="Ranges of response grouped by days")
+```
+```{r echo=T, collapse=F, out.width='45%'}
 # Comparison of solutions
 TukeyHSD(model_wash,conf.level = 0.95)
 pairw.anova(table_wash$Response,table_wash$Solution, conf.level = 0.95, method = "lsd", MSE = NULL, df.err = NULL, control = NULL)
@@ -684,10 +688,9 @@ The results of paried test are same. The plot of LSD test shows the average resp
 ```{r echo=T,collapse=TRUE, out.width='24%'}
 ols_test_normality(lm(Response~Design+Region, data=table_mail))
 ols_test_normality(lm(sqrt(Response)~Design+Region, data=table_mail))
-
 ols_plot_resid_hist(lm(Response~Design+Region, data=table_mail))
-plot(model_mail)
 ols_plot_resid_hist(lm(sqrt(Response)~Design+Region, data=table_mail))
+plot(model_mail)
 plot(lm(sqrt(Response)~Design+Region, data=table_mail))
 ```
 
@@ -699,7 +702,7 @@ summary.lm(model_mail_sqrt)
 
 ```{r echo=T,collapse=T, out.width='24%'}
 # plot(LSD.test(model_mail_sqrt, trt="Design",alpha = 0.05,p.adj="bonferroni"))
-pairw.anova(sqrt(table_mail$Response),table_mail$Design, conf.level = 0.95, method = "lsd", MSE = NULL, df.err = NULL, control = NULL)
+pairw.anova(sqrt(table_mail$Response),table_mail$Design, conf.level = 0.95, method = "lsd")
 ``` 
 
 ### Problem 3
