--- a/docs/stat565/hw_stat565.Rmd
+++ b/docs/stat565/hw_stat565.Rmd
@@ -617,7 +617,7 @@ pairw.anova(table_wash$Response,table_wash$Days, conf.level = 0.95, method = "ls
 pairw.anova(table_wash$Response,table_wash$Days, conf.level = 0.95, method = "tukey", MSE = NULL, df.err = NULL, control = NULL)
 ```
 
-```{r echo=T,collapse=TRUE, out.width='20%'}
+```{r echo=T,collapse=TRUE, out.width='20%',fig.show='hold'}
 ols_test_normality(lm(Response~Solution+Days, data=table_wash))
 ols_plot_resid_hist(lm(Response~Solution+Days, data=table_wash))
 plot(model_wash)
