--- a/docs/usp537/hw_usp537.Rmd
+++ b/docs/usp537/hw_usp537.Rmd
@@ -443,3 +443,76 @@ My conclusion is that the value of slope $=1$ is two balance points which relate
   _[3] Mackie, John L. The Cement of the Universe: A study in Causation. Clarendon Press, Oxford, England, 1988._
   
   _[4] Salmon, W. (1984) Scientific Explanation and the Causal Structure of the World. Princeton University Press._
+
+
+
+## Problem Set 3
+
+1. Using the Logit Model
+ 
+ The first step in the application of a Logit model is the specification (and estimation) of the utility functions for the utility functions for the utility functions for the utility functions for the utility functions for the alternative modes. Let’s assume that the following utility specifications are available:
+
+V(auto) = –0.05–0.08(auto TT)–0.105(parking cost)+0.00001*(HH income)
+
+V(bus)= –0.08(bus TT)–0.10(bus WT)– 0.65*(bus fare)
+
+where
+
+  * V(auto) and V(bus) are the systematic utilities of auto and bus respectively;
+  
+  * (auto TT) is the travel time for mode (in minutes);
+  
+  * (HH income) is the household annual income (in dollars);
+  
+  * (parking cost) and (bus fare) are in dollars;
+  
+  * (bus TT) is the travel time for the bus (in minutes);
+  
+  * (bus WT) is the waiting time for bus (in minutes). For simplicity let’s assume average waiting time to be half the headway. 
+
+Table 1 shows the characteristics of work trips for two population segments. (Think of segment A as people living near the center of a city and segment B as people living in the the the suburbs. People in bothboth segments all work in the downtown area.) 
+
+Table 1: Characteristics of work trips for two population segments
+||Segment|A|Segment|B|
+| --- | ---: | :--- | ---: | :--- |
+|Variabel|Auto|Bus|Auto|Bus|
+|Auto Travel time(min)|25| - | 40 | - |
+|Parking cost(\$)|3.00| - | 8.00 | - |
+|Bus Travel time(min)| - | 40 | - | 60 |
+|Bus headway(min)| - |15| - | 20 |
+|Household annual income(\$)| 40|000 | 80|000 |
+
+ a. Based on the information in Table 1, compute the probabilities that an individual belonging to each segment will choose auto for a work trip.
+ 
+ 
+ b. In order to increase transit ridership, the local transport authority is considering the following options:
+   i. Reducing the fare by 50 cents in both segments.
+   
+   ii. Doubling the number of buses on each route (which would halve the headways).
+   
+   iii. Increasing parking costs by 50% (i.e. \$3.00 parking cost increases to \$4.50)
+For each population segment, how will each of these strategies affect transit ridership (market share of transit), and which option will be most effective in increasing ridership?
+
+ c. Describe, using a few sentences, another policy that can be analyzed using this demand model.
+ 
+ d. What monetary value of bus travel time, measured in dollars per hour, is implied by the coefficients of this model?
+ 
+2. Transportation and Land Use
+
+To examine the relationship between transportation cost and land use, consider the following example. A region produces coffee, tea, and wheat for world markets. All output is sold at the port for the current price. Assume that the only input is land and that each farmer gets to keep the price minus the transportation cost and must also pay rent on the land.
+
+||Coffee|Tea|Wheat|
+| --- | --- | --- | --- |
+|Acres of land per unit of output|0.2|0.25|0.5|
+Transport cost per unit per mile |8  |5   |1|
+Price at the port| 100|100|100|
+
+ a. In a competitive market, what is the land rent at each distance from the port? At what distance is each crop grown? (Specify the bid rent equation for each crop and the distances over which each will be highest. The latter part can be seen most easily by graphing the equations, but the distances should be calculated directly from the equations.)
+ 
+ b. Land Owner owns 100 acres of land 15 miles from the port. What is the annual rental income? If the interest rate is 5% per year and all prices and costs are expected to remain the same forever, what is the market value of the land?
+ 
+ c. Return to the assumptions of (a) but assume that the government decides to subsidize 50% of all transport costs. What happens to land rents and the distance each crop is grown? What would you conclude regarding the impact of transportation costs on city size? What is Land Owners' land worth now if the interest rate is 5%? Are the farmers any better off because of the subsidy? Who does benefit from the subsidy?
+ 
+ d. What happens in (c) if all prices for output fall by 50% as well?
+ 
+ e. Describe the potential impacts on land use if investments were made to the transportation infrastructure (increasing highway lanes) such that transportation costs are lowered.
