--- a/static/stat562/hw_stat562.Rmd
+++ b/static/stat562/hw_stat562.Rmd
@@ -548,22 +548,20 @@ $\frac{Z_1}{Z_2}$ is free of $\alpha$. Therefore，$\frac{\ln X_1}{\ln X_2}$ is 
 
 ## HW6
 
-**6.30** Let $X_1,..,X_n$ be a random sample from the pdf f(x ifJ.) = e-(x-!-') , where -00 < fJ. <x < 00.
+**6.30** Let $X_1,..,X_n$ be a random sample from the pdf $f(x|\mu) = e^{-(x-\mu)}$, where $-\infty<\mu<x<\infty$.
 
-(a). Show that $X(1) = min$; $X_i$ is a complete sufficient statistic.
+(a). Show that $X_{(1)}=\min_iX_i$ is a complete sufficient statistic.
 
-(b). Use Basu's Theorem to show that $\bar X$ and $\sigma^2$ are independent.
+(b). Use Basu's Theorem to show that $X_{(1)}$ and $S^2$ are independent.
 
 
  ---
 
-**7.6** Let Xl , . . . , Xn be a random sample from the pdf
+**7.6** Let $X_1,..,X_n$ be a random sample from the pdf $f(x|\theta)=\theta x^{-2}$, where $0<\theta\le x<\infty$.
 
-f(xIO) O -2 X , 0 < 0 􀀬 x < 00 .
-
- (a). What is a sufficient statistic for 87
- (b). Find the MLE of 8.
- (c). Find the method of moments estimator of O.
+ (a). What is a sufficient statistic for $\theta$?
+ (b). Find the MLE of $\theta$.
+ (c). Find the method of moments estimator of $\theta$.
 
  ---
 
@@ -573,27 +571,22 @@ if x < 0
 if O 􀃉 x 􀃉 jJ
 if x > jJ,
 
-where the parameters a and jJ are positive.
+where the parameters $\alpha$ and $\beta$ are positive.
 
- (a). Find a tW<rdimensional sufficient statistic for (a, jJ).
+ (a). Find a tW<rdimensional sufficient statistic for ($\alpha,\beta$).
  
- (b). Find the MLEs of a and jJ.
+ (b). Find the MLEs of $\alpha$ and $\beta$.
  
- (c). The length (in millimeters) of cuckoos' eggs found in hedge sparrow nests can be modeled with this distribution. For the data
- 
-22.0, 23.9, 20.9, 23.8, 25.0, 24.0, 21 .7, 23.8, 22.8, 23. 1, 23. 1 , 23.5, 23.0, 23.0,
-
-find the MLEs of a and jJ.
+ (c). The length (in millimeters) of cuckoos' eggs found in hedge sparrow nests can be modeled with this distribution. For the data $22.0, 23.9, 20.9, 23.8, 25.0, 24.0, 21 .7, 23.8, 22.8, 23. 1, 23. 1 , 23.5, 23.0, 23.0$, find the MLEs of $\alpha$ and $\beta$.
 
  ---
 
-**7.11** Let $X_1,..,X_n$, be iid with pdf
+**7.11** Let $X_1,..,X_n$, be iid with pdf $f(x|\theta)=\theta x^{\theta-1}$, where $0\le x\le1,0<\theta<\infty$
 
-f(xI9) = 9x9-t, 0 􀋁 X 􀁱 1 , 0 < (} < 00 .
 
- (a). Find the MLE of 8, and show that its variance --+ 0 as n --+ 00.
+ (a). Find the MLE of $\theta$, and show that its variance $n\to0$ as $n\to\infty$.
 
- (b). Find the method of moments estimator of (}.
+ (b). Find the method of moments estimator of $\theta$.
 
 ## HW7
 
