--- a/docs/stat562/hw_stat562.Rmd
+++ b/docs/stat562/hw_stat562.Rmd
@@ -567,9 +567,7 @@ $\frac{Z_1}{Z_2}$ is free of $\alpha$. Therefore，$\frac{\ln X_1}{\ln X_2}$ is 
 
 **7.10** The independent random variables $X_1,..,X_n$ have the common distribution
 
-if x < 0
-if O 􀃉 x 􀃉 jJ
-if x > jJ,
+$$P(X_i\le x|\alpha,\beta)=\begin{cases}0&\text{if }x<0\\(\frac{x}\beta)^{\alpha}&\text{if }0\le x\le\beta\\1&\text{if } x>\beta\end{cases}$$
 
 where the parameters $\alpha$ and $\beta$ are positive.
 
