fix the format of 537

--- a/docs/usp537/hw_usp537.Rmd
+++ b/docs/usp537/hw_usp537.Rmd
@@ -475,24 +475,24 @@ Table 1 shows the characteristics of work trips for two population segments. (Th
 Table 1: Characteristics of work trips for two population segments
 
 ||Segment|A|Segment|B|
-| --- | ---: | :--- | ---: | :--- |
+| --- | --- | --- | --- | :--- |
 |Variabel|Auto|Bus|Auto|Bus|
 |Auto Travel time(min)|25| - | 40 | - |
 |Parking cost(\$)|3.00| - | 8.00 | - |
 |Bus Travel time(min)| - | 40 | - | 60 |
 |Bus headway(min)| - |15| - | 20 |
-|Household annual income(\$)| 40|000 | 80|000 |
+|Household annual income(\$)| |40000 | |80000 |
 
  a. Based on the information in Table 1, compute the probabilities that an individual belonging to each segment will choose auto for a work trip.
  
  
  b. In order to increase transit ridership, the local transport authority is considering the following options:
- 
-   i. Reducing the fare by 50 cents in both segments.
+
+  i. Reducing the fare by 50 cents in both segments.
    
-   ii. Doubling the number of buses on each route (which would halve the headways).
+  ii. Doubling the number of buses on each route (which would halve the headways).
    
-   iii. Increasing parking costs by 50% (i.e. \$3.00 parking cost increases to \$4.50)
+  iii. Increasing parking costs by 50% (i.e. \$3.00 parking cost increases to \$4.50)
 For each population segment, how will each of these strategies affect transit ridership (market share of transit), and which option will be most effective in increasing ridership?
 
  c. Describe, using a few sentences, another policy that can be analyzed using this demand model.
